--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.15.9",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "vue": "^2.6.14",
+    "vue-router": "3",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
