--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "vue": "^2.6.14",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "3",
     "vue-table-with-tree-grid": "^0.2.4"
   },
