--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.3",
     "element-ui": "^2.15.9",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "lodash": "^4.17.21",
     "vue": "^2.6.14",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3",
