--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3",
